CMAKE_MINIMUM_REQUIRED (VERSION 3.1)
CMAKE_POLICY (SET CMP0063 NEW)

ADD_EXECUTABLE (stomp-example
     stomp/stomp.cpp
  )

SET_PROPERTY (TARGET stomp-example PROPERTY CXX_STANDARD 11)
SET_PROPERTY (TARGET stomp-example PROPERTY CXX_STANDARD_REQUIRED ON)

INCLUDE_DIRECTORIES (${CMAKE_CURRENT_BINARY_DIR}/..)

TARGET_LINK_LIBRARIES (stomp-example
    Logfile
  )
